--- a/client/pom.xml
+++ b/client/pom.xml
@@ -3,8 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.unice.polytech.isa</groupId>
     <artifactId>tcf-client</artifactId>
+    <packaging>pom</packaging>
     <name>ISA :: The Cookie Factory :: Remote Client</name>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>../adecouper</module>
+    </modules>
 
     <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
