--- a/j2e/adecouper/pom.xml
+++ b/j2e/adecouper/pom.xml
@@ -6,10 +6,8 @@
     <groupId>fr.unice.polytech.isa</groupId>
     <artifactId>adecouper</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>core</module>
-    </modules>
     <name>ISA :: The Cookie Factory :: J2E Backend</name>
+    <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
