--- a/j2e/core/pom.xml
+++ b/j2e/core/pom.xml
@@ -8,6 +8,7 @@
     <groupId>fr.unice.polytech.isa</groupId>
     <artifactId>core</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
 
 </project>
