Multi module POM

--- a/j2e/core/pom.xml
+++ b/j2e/core/pom.xml
@@ -5,10 +5,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>fr.unice.polytech.isa</groupId>
+    <parent>
+        <groupId>fr.unice.polytech.isa</groupId>
+        <artifactId>tcf-backend</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>core</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
-
+    <packaging>jar</packaging>
 </project>
