--- a/client/pom.xml
+++ b/client/pom.xml
@@ -6,10 +6,6 @@
     <packaging>pom</packaging>
     <name>ISA :: The Cookie Factory :: Remote Client</name>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>../j2e/adecouper</module>
-        <module>../j2e/core</module>
-    </modules>
 
     <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,6 +20,11 @@
         <version>4.12</version>
         <scope>test</scope>
       </dependency>
+        <dependency>
+            <groupId>fr.unice.polytech.isa</groupId>
+            <artifactId>tcf-backend</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
