--- a/client/pom.xml
+++ b/client/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.unice.polytech.isa</groupId>
     <artifactId>tcf-client</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <name>ISA :: The Cookie Factory :: Remote Client</name>
     <version>1.0-SNAPSHOT</version>
 
