--- a/j2e/pom.xml
+++ b/j2e/pom.xml
@@ -11,7 +11,10 @@
 
     <modules>
         <module>core</module>
-        <module>adecouper</module>
+        <module>customer-care</module>
+        <module>webservices</module>
+        <module>cart</module>
+        <module>payement</module>
     </modules>
 
     <properties>
@@ -80,7 +83,7 @@
     <distributionManagement>
         <repository>
             <id>snapshots</id>
-            <name>TCF/DevOps en PLS</name>
+            <name>TCF/Devops3</name>
             <url>http://erebe-vm5.i3s.unice.fr/artifactory/libs-snapshot-local</url>
         </repository>
     </distributionManagement>
