--- a/j2e/webservices/pom.xml
+++ b/j2e/webservices/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>customer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.openejb</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0-6</version>
+        </dependency>
     </dependencies>
 
     <parent>
