--- a/j2e/core/pom.xml
+++ b/j2e/core/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>javaee-api</artifactId>
             <version>6.0-6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+            <version>2.6.16</version>
+        </dependency>
     </dependencies>
 
     <parent>
