--- a/j2e/cart/pom.xml
+++ b/j2e/cart/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>tcf-client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>fr.unice.polytech.isa</groupId>
+            <artifactId>customer-care</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <parent>
