--- a/j2e/webservices/pom.xml
+++ b/j2e/webservices/pom.xml
@@ -17,7 +17,7 @@
         </dependency>
         <dependency>
             <groupId>fr.unice.polytech.isa</groupId>
-            <artifactId>customer</artifactId>
+            <artifactId>customer-care</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
