--- a/j2e/webservices/pom.xml
+++ b/j2e/webservices/pom.xml
@@ -7,7 +7,17 @@
     <dependencies>
         <dependency>
             <groupId>fr.unice.polytech.isa</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.unice.polytech.isa</groupId>
             <artifactId>cart</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.unice.polytech.isa</groupId>
+            <artifactId>customer-care</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
